--- a/index.html
+++ b/index.html
@@ -4,8 +4,29 @@
  <meta charset="UTF-8">
  <meta name="viewport" content="width=device-width, initial-scale=1.0">
  <title>Ползунки в стиле неоморфизм | Neomorphic sliders</title>
+ <link rel="stylesheet" href="./style.min.css">
 </head>
 <body>
  
+ <main>
+
+  <section class="loader">
+   <!-- <span class="loader__item" style="--i:0"></span> -->
+   <span class="loader__item" style="--i:1"></span>
+   <span class="loader__item" style="--i:2"></span>
+   <span class="loader__item" style="--i:3"></span>
+   <span class="loader__item" style="--i:4"></span>
+   <span class="loader__item" style="--i:5"></span>
+   <span class="loader__item" style="--i:6"></span>
+   <span class="loader__item" style="--i:7"></span>
+   <span class="loader__item" style="--i:8"></span>
+   <span class="loader__item" style="--i:9"></span>
+   <span class="loader__item" style="--i:10"></span>
+   <span class="loader__item" style="--i:11"></span>
+   <span class="loader__item" style="--i:12"></span>
+  </section>
+
+ </main>
+
 </body>
 </html>
