--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
  <meta charset="UTF-8">
  <meta name="viewport" content="width=device-width, initial-scale=1.0">
- <title>Загрузчик неоморфные ползунки | Loader neomorphic sliders</title>
+ <title>Загрузчик - неоморфные ползунки | Loader - neomorphic sliders</title>
  <link rel="stylesheet" href="./style.min.css">
 </head>
 <body>
